# grove

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  grove.py  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  documentation.yml  release.yml
docs/: .gitignore  api.rst  conf.py  configuration.rst  development.rst  examples.rst  faq.rst  grove.rst  index.rst  internals.rst  modules.rst  processors.rst  quickstart.rst  scheduling.rst  style.rst
docs/static/: custom.css
grove/: __about__.py  __init__.py  constants.py  exceptions.py  logging.py  models.py  types.py
grove/caches/: __init__.py  aws_dynamodb.py  local_file.py  local_memory.py
grove/configs/: __init__.py  aws_ssm.py  local_file.py
grove/connectors/: __init__.py
grove/connectors/atlassian/: __init__.py  api.py  audit_events.py
grove/connectors/atlassian_site/: __init__.py  api.py  audit_events.py
grove/connectors/bigquery/: query.py
grove/connectors/dropbox/: __init__.py  api.py  team_events.py
grove/connectors/fleetdm/: README.md  __init__.py  api.py  audit_logs.py  host_logs.py  software_logs.py  vulnerability_logs.py
grove/connectors/github/: __init__.py  api.py  audit_log.py  rulesets.py
grove/connectors/google/: __init__.py  bigquery_query.py  query.py  utils.py
grove/connectors/gsuite/: __init__.py  activities.py  alerts.py  usage.py
grove/connectors/launchdarkly/: __init__.py  api.py  audit_records.py
grove/connectors/local/: __init__.py  heartbeat.py
grove/connectors/okta/: __init__.py  api.py  system_log.py  users.py
grove/connectors/onepassword/: __init__.py  api.py  common.py  events_audit.py  events_itemusages.py  events_signinattempts.py  util.py
grove/connectors/oomnitza/: __init__.py  activities.py  api.py
grove/connectors/pagerduty/: __init__.py  api.py  audit_records.py
grove/connectors/quay/: __init__.py  api.py  organization_logs.py
grove/connectors/sf/: __init__.py  base.py  event_log.py  field_audit_trail.py  setup_audit_trail.py  threat_detection.py
grove/connectors/sfmc/: __init__.py  api.py  audit_events.py  security_events.py
grove/connectors/slack/: __init__.py  api.py  audit_logs.py
grove/connectors/snowflake/: __init__.py  common.py  login_history.py  query_history.py  session_history.py
grove/connectors/stripe/: __init__.py  events.py
grove/connectors/tfc/: __init__.py  api.py  audit_trails.py
grove/connectors/tines/: __init__.py  api.py  audit_logs.py
grove/connectors/torq/: __init__.py  activity_logs.py  api.py  audit_logs.py
grove/connectors/twilio/: __init__.py  messages.py  monitor_events.py
grove/connectors/workday/: __init__.py  activity_logging.py  api.py
grove/connectors/zendesk/: __init__.py  api.py  audit_logs.py  search_api.py  tickets.py
grove/connectors/zitadel/: __init__.py  events.py
grove/connectors/zoom/: __init__.py  activities.py  api.py  operationlogs.py
grove/entrypoints/: __init__.py  aws_lambda.py  base.py  local_daemon.py  local_process.py
grove/helpers/: __init__.py  parsing.py  plugin.py
grove/outputs/: __init__.py  aws_s3.py  local_file.py  local_stdout.py  remote_http.py
grove/processors/: __init__.py  extract_paths.py  filter_entries.py  filter_paths.py  split_path.py  zip_path.py  zip_paths.py
grove/secrets/: __init__.py  aws_ssm.py  hashicorp_vault.py  local_file.py
templates/: README.md
templates/code/: .gitignore  Makefile  README.md  cookiecutter.json
templates/code/hooks/: post_gen_project.py
templates/code/scripts/: run_cookiecutter.py
templates/code/{{ cookiecutter.project_name }}/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
templates/code/{{ cookiecutter.project_name }}/.github/workflows/: ci.yml  release.yml
templates/code/{{ cookiecutter.project_name }}/tests/: __init__.py  test_example.py
templates/code/{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: example_logs.py
templates/code/{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/inits/: caches.py  configs.py  outputs.py  processors.py  secrets.py
templates/configuration/1password/: events_audit.json  events_itemusages.json  events_signinattempts.json
templates/configuration/atlassian/: audit_events.json
templates/configuration/atlassian_site/: audit_events.json
templates/configuration/bigquery/: bigquery.json
templates/configuration/dropbox/: team_events.json
templates/configuration/fleetdm/: fleetdm_vulnerability_logs.json
tests/: __init__.py  test_caches_local_file.py  test_caches_local_memory.py  test_configs_aws_ssm.py  test_connectors_atlassian_audit_events.py  test_connectors_atlassian_site_audit_events.py  test_connectors_base.py  test_connectors_deduplicate.py  test_connectors_dropbox_team_events.py  test_connectors_github_audit.py  test_connectors_github_client.py  test_connectors_github_rulesets.py  test_connectors_google_bigquery_query.py  test_connectors_google_utils.py  test_connectors_gsuite_activities.py  test_connectors_gsuite_alerts.py  test_connectors_launchdarkly_audit_records.py  test_connectors_launchdarkly_audit_records_verbose.py  test_connectors_lock.py  test_connectors_okta_client.py  test_connectors_okta_system_log.py  test_connectors_okta_users.py  test_connectors_onepassword_events_audit.py  test_connectors_onepassword_events_itemusages.py  test_connectors_onepassword_events_signinattempts.py  test_connectors_onepassword_util.py  test_connectors_oomnitza_activities.py  test_connectors_pagerduty_audit_records.py  test_connectors_sf_event_log.py  test_connectors_sf_field_audit_trail.py  test_connectors_sf_setup_audit_trail.py  test_connectors_sf_threat_detection.py  test_connectors_sfmc_audit_events.py  test_connectors_sfmc_security_events.py  test_connectors_slack_audit.py  test_connectors_snowflake_common.py  test_connectors_stripe_events.py  test_connectors_tfc_audit_trails.py  test_connectors_tines_audit_logs.py  test_connectors_torq_activity_logs.py  (+21 more)
tests/connectors/: __init__.py  test.py
tests/mocks/: __init__.py  output.py
(+167 files in other folders)
